--- a/refs.bib
+++ b/refs.bib
@@ -36,3 +36,39 @@
   author={Aggelos Kiayias},
   year=2024
 }
+@inproceedings{groth2016size,
+  title={On the size of pairing-based non-interactive arguments},
+  author={Groth, Jens},
+  booktitle={Annual international conference on the theory and applications of cryptographic techniques},
+  pages={305--326},
+  year={2016},
+  organization={Springer}
+}
+@article{sattath2022quantum,
+  title={Quantum prudent contracts with applications to Bitcoin},
+  author={Sattath, Or},
+  journal={arXiv preprint arXiv:2204.12806},
+  year={2022}
+}
+@misc{drake-progcrypto-oss,
+  author       = {Justin Drake},
+  title        = {One-shot Signatures},
+  howpublished = {PROGCRYPTO (YouTube video)},
+  url          = {https://www.youtube.com/watch?v=VmqkH3NPG_s},
+  note         = {Talk},
+  urldate      = {2025-09-09}
+}
+@book{shor2012quantum,
+  title={Quantum Money},
+  author={Shor, Peter W and Farhi, Edward and Gosset, David and Hassidim, Avinatan and Lutomirski, Andrew},
+  volume={19},
+  year={2012},
+  publisher={MIT. January}
+}
+@inproceedings{alder2023time,
+  title={About time: On the challenges of temporal guarantees in untrusted environments},
+  author={Alder, Fritz and Scopelliti, Gianluca and Van Bulck, Jo and M{\"u}hlberg, Jan Tobias},
+  booktitle={Proceedings of the 6th Workshop on System Software for Trusted Execution},
+  pages={27--33},
+  year={2023}
+}
