--- a/main.tex
+++ b/main.tex
@@ -13,24 +13,10 @@
 \usepackage[section]{placeins}
 \usepackage{float} % for H when absolutely needed
 % dark PDF theme
-\usepackage{xcolor}
-\pagecolor[rgb]{0,0,0} %black
-\color[rgb]{0.8,0.8,0.8} %grey
+% \usepackage{xcolor}
+% \pagecolor[rgb]{0,0,0} %black
+% \color[rgb]{0.8,0.8,0.8} %grey
 \usepackage{hyperref}
-
-% % Float behavior tuning: keep floats with text; avoid float-only pages
-% \makeatletter
-% \setlength{\textfloatsep}{8pt plus 2pt minus 2pt}  % space above/below floats
-% \setlength{\floatsep}{8pt plus 2pt minus 2pt}
-% \setlength{\intextsep}{8pt plus 2pt minus 2pt}
-% \renewcommand{\topfraction}{0.85}
-% \renewcommand{\bottomfraction}{0.70}
-% \renewcommand{\textfraction}{0.10}
-% \renewcommand{\floatpagefraction}{0.80}  % don't make a float-only page unless >=80% full
-% \setcounter{topnumber}{3}
-% \setcounter{bottomnumber}{2}
-% \setcounter{totalnumber}{5}
-% \makeatother
 
 \newcommand{\prot}{\textsf{QuanTEEum}}
 \newcommand{\sid}{\mathsf{sid}}
